Add option set to enable -Xmx512m -XX:MaxPermSize=128m for `geronimo:start -Doptions=morememory`
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/1.2@505803 13f79535-47bb-0310-9956-ffa450edef68