@@ -1132,6 +1132,14 @@
 
                         <optionSets>
                             <optionSet>
+                                <id>morememory</id>
+                                <options>
+                                    <option>-Xmx512m</option>
+                                    <option>-XX:MaxPermSize=128m</option>
+                                </options>
+                            </optionSet>
+                            
+                            <optionSet>
                                 <id>debug</id>
                                 <options>
                                     <option>-Xdebug</option>
